--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
 # Include the license file
 include LICENSE.txt
+include CHANGES.rst
+include tox.ini
+graft tests
+graft examples
+prune examples/screenshots
+global-exclude *.py[cod]
