Add support for Click 8 (#12)

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,21 @@
 [tox]
-envlist = py27,py37
+envlist =
+    py{39,38,37,36,py3}
+    pre
+skip_missing_interpreters = true
 
 [testenv]
-deps = pytest
+deps =
+    pytest
+    click>=7.0
 commands =
     pytest
+pip_pre = false
+
+[testenv:pre]
+deps =
+    pytest
+    click>=7.0
+commands =
+    pytest
+pip_pre = true
