--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,14 @@
 [tox]
 envlist =
-    py{39,38,37,36,py3}
-    pre
-skip_missing_interpreters = true
+    py36-{7,8}
+    py37-{7,8}
+    py38-{7,8}
+    py39-{7,8}
 
 [testenv]
 deps =
     pytest
-    click>=7.0
-commands =
-    pytest
-pip_pre = false
-
-[testenv:pre]
-deps =
-    pytest
-    click>=7.0
-commands =
-    pytest
-pip_pre = true
+    7: click >= 7.0, < 8
+    8: click >= 8.0.0a1, < 9
+commands = pytest
+skip_missing_interpreters = true
