--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@
 include LICENSE.txt
 include CHANGES.rst
 include tox.ini
+include click_help_colors/py.typed
 graft tests
 graft examples
 prune examples/screenshots
