--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,9 @@ envlist =
     py37-{7,8}
     py38-{7,8}
     py39-{7,8}
+    py310-{7,8}
+    py311-{7,8}
+    py312-{7,8}
 
 [testenv]
 deps =
@@ -12,3 +15,10 @@ deps =
     8: click >= 8.0.0a1, < 9
 commands = pytest
 skip_missing_interpreters = true
+
+[testenv:typing]
+deps =
+    mypy
+    7: click >= 7.0, < 8
+    8: click >= 8.0.0a1, < 9
+commands = mypy
