--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,8 +24,8 @@ jobs:
           - {name: '3.6', python: '3.6', os: ubuntu-20.04, tox: py36}
           - {name: Typing, python: '3.11', os: ubuntu-latest, tox: typing}
     steps:
-      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
-      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ecaddd1
+      - uses: actions/checkout@v4.2.1
+      - uses: actions/setup-python@v5.2.0
         with:
           python-version: ${{ matrix.python }}
       - run: pip install tox
