--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,5 +28,6 @@ jobs:
       - uses: actions/setup-python@v5.2.0
         with:
           python-version: ${{ matrix.python }}
+          allow-prereleases: true
       - run: pip install tox
       - run: tox run -e ${{ matrix.tox }}
